--- a/styles/app.css
+++ b/styles/app.css
@@ -1,6 +1,9 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+/*@import 'tailwindcss/base';*/
+/*@import 'tailwindcss/components';*/
+/*@import 'tailwindcss/utilities';*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root{
     --slateGreen: #486e65;
@@ -34,8 +37,15 @@
 }
 
 @layer components {
+    .btn {
+        @apply py-2 px-4 font-semibold rounded-lg shadow-lg;
+    }
+    .btn-sky {
+        @apply text-white bg-sky-500 hover:bg-sky-700;
+    }
     .spencer{
-        @apply relative flex text-center text-red-300
+        background: red;
+        @apply relative flex text-center
         hover:text-blue-500
     }
 }
