--- a/styles/app.css
+++ b/styles/app.css
@@ -48,4 +48,11 @@
         @apply relative flex text-center
         hover:text-blue-500
     }
+    .lhCrop::before {
+        content: '';
+        display: block;
+        height: 0;
+        width: 0;
+        margin-top: calc((1 - 1.5) * 0.5em);
+    }
 }
