--- a/app/styles/global-old.css
+++ b/app/styles/global-old.css
@@ -1,5 +1,3 @@
-
-
 /*
  * You can just delete everything here or keep whatever you like, it's just a
  * quick baseline!
@@ -10,8 +8,8 @@
   --color-links: hsl(213, 100%, 52%);
   --color-links-hover: hsl(213, 100%, 43%);
   --color-border: hsl(0, 0%, 82%);
-  --font-body: -apple-system, "Segoe UI", Helvetica Neue, Helvetica, Roboto,
-    Arial, sans-serif, system-ui, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-body: "Inter", "Segoe UI", Helvetica Neue, Helvetica, Roboto, Arial,
+    sans-serif, system-ui, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 html {
@@ -37,8 +35,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: var(--color-background);
-  color: var(--color-foreground);
+  /* background-color: var(--color-background);
+  color: var(--color-foreground); */
 }
 
 body {
@@ -53,7 +51,6 @@ a {
 
 a:hover {
   color: var(--color-links-hover);
-  text-decoration: underline;
 }
 
 hr {
@@ -92,10 +89,13 @@ input:where([type="search"]) {
 }
 
 .container {
-  --gutter: 16px;
+  /* --gutter: 16px;
   width: 1024px;
   max-width: calc(100% - var(--gutter) * 2);
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto; */
 }
 
+svg {
+  width: 100%;
+}
