--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,6 +1,8 @@
 /*
 ! tailwindcss v3.0.1 | MIT License | https://tailwindcss.com
-*//*
+*/
+
+/*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
@@ -8,10 +10,14 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box; /* 1 */
-  border-width: 0; /* 2 */
-  border-style: solid; /* 2 */
-  border-color: currentColor; /* 2 */
+  box-sizing: border-box;
+  /* 1 */
+  border-width: 0;
+  /* 2 */
+  border-style: solid;
+  /* 2 */
+  border-color: currentColor;
+  /* 2 */
 }
 
 ::before,
@@ -27,12 +33,17 @@
 */
 
 html {
-  line-height: 1.5; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  -moz-tab-size: 4; /* 3 */
+  line-height: 1.5;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -moz-tab-size: 4;
+  /* 3 */
   -o-tab-size: 4;
-     tab-size: 4; /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+     tab-size: 4;
+  /* 3 */
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* 4 */
 }
 
 /*
@@ -41,8 +52,10 @@ html {
 */
 
 body {
-  margin: 0; /* 1 */
-  line-height: inherit; /* 2 */
+  margin: 0;
+  /* 1 */
+  line-height: inherit;
+  /* 2 */
 }
 
 /*
@@ -52,9 +65,12 @@ body {
 */
 
 hr {
-  height: 0; /* 1 */
-  color: inherit; /* 2 */
-  border-top-width: 1px; /* 3 */
+  height: 0;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  border-top-width: 1px;
+  /* 3 */
 }
 
 /*
@@ -107,8 +123,10 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* 1 */
-  font-size: 1em; /* 2 */
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
 }
 
 /*
@@ -146,9 +164,12 @@ sup {
 */
 
 table {
-  text-indent: 0; /* 1 */
-  border-color: inherit; /* 2 */
-  border-collapse: collapse;  /* 3 */
+  text-indent: 0;
+  /* 1 */
+  border-color: inherit;
+  /* 2 */
+  border-collapse: collapse;
+  /* 3 */
 }
 
 /*
@@ -162,12 +183,18 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: inherit; /* 1 */
-  color: inherit; /* 1 */
-  margin: 0; /* 2 */
-  padding: 0; /* 3 */
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: inherit;
+  /* 1 */
+  color: inherit;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+  padding: 0;
+  /* 3 */
 }
 
 /*
@@ -188,9 +215,12 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button; /* 1 */
-  background-color: transparent; /* 2 */
-  background-image: none; /* 2 */
+  -webkit-appearance: button;
+  /* 1 */
+  background-color: transparent;
+  /* 2 */
+  background-image: none;
+  /* 2 */
 }
 
 /*
@@ -232,8 +262,10 @@ Correct the cursor style of increment and decrement buttons in Safari.
 */
 
 [type='search'] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
 }
 
 /*
@@ -250,8 +282,10 @@ Remove the inner padding in Chrome and Safari on macOS.
 */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
 }
 
 /*
@@ -313,19 +347,25 @@ textarea {
 */
 
 input::-moz-placeholder, textarea::-moz-placeholder {
-  opacity: 1;  /* 1 */
-  color: #9ca3af; /* 2 */
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;  /* 1 */
-  color: #9ca3af; /* 2 */
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
 }
 
 input::placeholder,
 textarea::placeholder {
-  opacity: 1;  /* 1 */
-  color: #9ca3af; /* 2 */
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
 }
 
 /*
@@ -340,6 +380,7 @@ button,
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
+
 :disabled {
   cursor: default;
 }
@@ -358,8 +399,10 @@ audio,
 iframe,
 embed,
 object {
-  display: block; /* 1 */
-  vertical-align: middle; /* 2 */
+  display: block;
+  /* 1 */
+  vertical-align: middle;
+  /* 2 */
 }
 
 /*
@@ -419,456 +462,579 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
   --tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+
 .container {
   width: 100%;
 }
-@media (min-width: 640px) {
 
+@media (min-width: 640px) {
   .container {
     max-width: 640px;
   }
 }
-@media (min-width: 768px) {
 
+@media (min-width: 768px) {
   .container {
     max-width: 768px;
   }
 }
-@media (min-width: 1024px) {
 
+@media (min-width: 1024px) {
   .container {
     max-width: 1024px;
   }
 }
-@media (min-width: 1280px) {
 
+@media (min-width: 1280px) {
   .container {
     max-width: 1280px;
   }
 }
-@media (min-width: 1536px) {
 
+@media (min-width: 1536px) {
   .container {
     max-width: 1536px;
   }
 }
+
 .spencer {
-    background: red;
-    /* @apply relative flex text-center */
-    /* hover:text-blue-500; */
-  }
+  background: red;
+  /* @apply relative flex text-center */
+  /* hover:text-blue-500; */
+}
+
 .btn-underlined {
   text-transform: uppercase;
   text-decoration: underline;
   text-underline-offset: 4px;
-    font-size: 14px;
-    font-weight: 500;
+  font-size: 14px;
+  font-weight: 500;
 }
-.container {
-    padding: 0 15px;
-    margin: 0 auto;
-    position: relative;
-  }
-@media (min-width: 1024px) {
 
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+}
+
+@media (min-width: 1024px) {
   .container {
     max-width: 1440px;
   }
 }
+
 .fixed {
   position: fixed;
 }
+
 .absolute {
   position: absolute;
 }
+
 .relative {
   position: relative;
 }
+
 .top-0 {
   top: 0px;
 }
+
 .left-0 {
   left: 0px;
 }
+
 .top-1\/2 {
   top: 50%;
 }
+
 .right-auto {
   right: auto;
 }
+
 .left-1\/2 {
   left: 50%;
 }
+
 .right-0 {
   right: 0px;
 }
+
 .top-\[68px\] {
   top: 68px;
 }
+
 .z-10 {
   z-index: 10;
 }
+
 .z-\[1100\] {
   z-index: 1100;
 }
+
 .z-\[1050\] {
   z-index: 1050;
 }
+
 .m-auto {
   margin: auto;
 }
+
 .m-3 {
   margin: 0.75rem;
 }
+
 .m-2 {
   margin: 0.5rem;
 }
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+
 .mt-10 {
   margin-top: 2.5rem;
 }
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+
 .mb-4 {
   margin-bottom: 1rem;
 }
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+
 .mb-8 {
   margin-bottom: 2rem;
 }
+
 .mr-4 {
   margin-right: 1rem;
 }
+
 .ml-3 {
   margin-left: 0.75rem;
 }
+
 .mr-3 {
   margin-right: 0.75rem;
 }
+
 .block {
   display: block;
 }
+
 .flex {
   display: flex;
 }
+
 .grid {
   display: grid;
 }
+
 .hidden {
   display: none;
 }
+
 .h-\[20px\] {
   height: 20px;
 }
+
 .h-0 {
   height: 0px;
 }
+
 .h-\[52px\] {
   height: 52px;
 }
+
 .h-\[100vh\] {
   height: 100vh;
 }
+
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
 }
+
 .w-5\/12 {
   width: 41.666667%;
 }
+
 .w-full {
   width: 100%;
 }
+
 .w-\[20px\] {
   width: 20px;
 }
+
 .w-0 {
   width: 0px;
 }
+
 .max-w-\[249px\] {
   max-width: 249px;
 }
+
 .max-w-\[144px\] {
   max-width: 144px;
 }
+
 .max-w-\[20px\] {
   max-width: 20px;
 }
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: var(--tw-transform);
 }
+
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: var(--tw-transform);
 }
+
 .grid-cols-navMobile {
   grid-template-columns: minmax(50px, 1fr) minmax(50px, auto) minmax(50px, auto);
 }
+
 .flex-row {
   flex-direction: row;
 }
+
 .flex-col {
   flex-direction: column;
 }
+
 .items-center {
   align-items: center;
 }
+
 .justify-end {
   justify-content: flex-end;
 }
+
 .justify-center {
   justify-content: center;
 }
+
 .justify-between {
   justify-content: space-between;
 }
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
+
 .rounded {
   border-radius: 0.25rem;
 }
+
 .rounded-full {
   border-radius: 9999px;
 }
+
 .rounded-md {
   border-radius: 0.375rem;
 }
+
 .border {
   border-width: 1px;
 }
+
 .border-0 {
   border-width: 0px;
 }
+
 .border-t-\[1px\] {
   border-top-width: 1px;
 }
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+
 .border-primary-300 {
   --tw-border-opacity: 1;
   border-color: rgb(205 167 167 / var(--tw-border-opacity));
 }
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
+
 .bg-primary-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(57 39 39 / var(--tw-bg-opacity));
 }
+
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
 }
+
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
+
 .bg-primary-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(240 214 199 / var(--tw-bg-opacity));
 }
+
 .bg-primary-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(151 105 105 / var(--tw-bg-opacity));
 }
+
 .bg-slate-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
+
 .p-8 {
   padding: 2rem;
 }
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+
 .pt-\[30px\] {
   padding-top: 30px;
 }
+
 .pb-\[35px\] {
   padding-bottom: 35px;
 }
+
 .pb-12 {
   padding-bottom: 3rem;
 }
+
 .pt-2 {
   padding-top: 0.5rem;
 }
+
 .pt-12 {
   padding-top: 3rem;
 }
+
 .pr-6 {
   padding-right: 1.5rem;
 }
+
 .pt-\[68\] {
   padding-top: 68;
 }
+
 .pl-6 {
   padding-left: 1.5rem;
 }
+
 .pr-2\.5 {
   padding-right: 0.625rem;
 }
+
 .pr-2 {
   padding-right: 0.5rem;
 }
+
 .text-center {
   text-align: center;
 }
+
 .font-sentinel__SemiBoldItal {
   font-family: Sentinel SemiBoldItal, serif;
 }
+
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
 }
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+
 .text-heading-h5 {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+
 .font-medium {
   font-weight: 500;
 }
+
 .font-light {
   font-weight: 300;
 }
+
 .uppercase {
   text-transform: uppercase;
 }
+
 .capitalize {
   text-transform: capitalize;
 }
+
 .leading-7 {
   line-height: 1.75rem;
 }
+
 .leading-8 {
   line-height: 2rem;
 }
+
 .leading-none {
   line-height: 1;
 }
+
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
+
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .text-primary-50 {
   --tw-text-opacity: 1;
   color: rgb(242 236 236 / var(--tw-text-opacity));
 }
+
 .text-primary-300 {
   --tw-text-opacity: 1;
   color: rgb(205 167 167 / var(--tw-text-opacity));
 }
+
 .text-primary-600 {
   color: var(--primary-plum-600);
 }
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
+
 .text-neutral-50 {
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
 }
+
 .opacity-0 {
   opacity: 0;
 }
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
 .filter {
   filter: var(--tw-filter);
 }
+
 .transition {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -876,14 +1042,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+
 .transition-colors {
   transition-property: background-color, border-color, color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+
 .duration-200 {
   transition-duration: 200ms;
 }
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -899,27 +1068,41 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 @font-face {
   font-family: "Sentinel Book";
+
   font-display: swap;
+
   font-style: normal;
+
   font-weight: 400;
+
   src: url("/fonts/sentinel/Sentinel-Book.woff") format("woff");
+
   src: url("/fonts/sentinel/Sentinel-Book.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Sentinel SemiBold";
+
   font-display: swap;
+
   font-style: normal;
+
   font-weight: 600;
+
   src: url("/fonts/sentinel/Sentinel-Semibold.woff") format("woff");
+
   src: url("/fonts/sentinel/Sentinel-Semibold.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Sentinel SemiBoldItal";
+
   font-display: swap;
+
   font-weight: 600;
+
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff") format("woff");
+
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff2") format("woff2");
 }
 
@@ -950,14 +1133,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-
   .tablet\:flex-row {
     flex-direction: row;
   }
 }
 
 @media (min-width: 1024px) {
-
   .laptop\:relative {
     position: relative;
   }
@@ -1025,7 +1206,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 1280px) {
-
   .desktop\:max-w-\[220px\] {
     max-width: 220px;
   }
