--- a/app/styles/global-old.css
+++ b/app/styles/global-old.css
@@ -6,7 +6,7 @@
   --color-foreground: hsl(0, 0%, 7%);
   --color-background: hsl(0, 0%, 100%);
   --color-links: hsl(213, 100%, 52%);
-  --color-links-hover: hsl(213, 100%, 43%);
+  --color-links-hover: #6c9ac0;
   --color-border: hsl(0, 0%, 82%);
   --font-body: "Inter", "Segoe UI", Helvetica Neue, Helvetica, Roboto, Arial,
     sans-serif, system-ui, "Apple Color Emoji", "Segoe UI Emoji";
@@ -35,6 +35,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   /* background-color: var(--color-background);
   color: var(--color-foreground); */
 }
@@ -42,11 +43,14 @@ body {
 body {
   font-family: var(--font-body);
   line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: auto;
 }
 
 a {
   color: var(--color-links);
   text-decoration: none;
+  transition: color 0.3s;
 }
 
 a:hover {
@@ -86,14 +90,6 @@ input:where([type="search"]) {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
-}
-
-.container {
-  /* --gutter: 16px;
-  width: 1024px;
-  max-width: calc(100% - var(--gutter) * 2);
-  margin-right: auto;
-  margin-left: auto; */
 }
 
 svg {
