--- a/styles/app.css
+++ b/styles/app.css
@@ -61,6 +61,10 @@
   .svgChildHover-color svg {
     fill: #000;
   }
+
+  .blog-content a {
+    @apply text-green-600 underline hover:text-green-400;
+  }
 }
 
 @layer utilities {
@@ -92,5 +96,30 @@
   }
   .inView {
     @apply translate-y-[0px];
+  }
+
+  .blog-content p:first-child {
+    @apply text-lg mb-8 tablet:text-xl tablet:mb-10;
+  }
+
+  .blog-content h5 {
+    @apply font-sentinel__SemiBoldItal text-primary-600 mb-8 text-2xl;
+  }
+
+  .blog-content li {
+    @apply text-lg mb-4;
+    list-style-type: disc;
+  }
+
+  .input-basic {
+    @apply text-neutral-500 bg-neutral-100 outline-none border-0 py-4 px-5 rounded-lg w-full mb-4 ring-offset-white ring-offset-4 transform transition-all;
+  }
+
+  .input-success {
+    @apply ring ring-teal-400;
+  }
+
+  .input-error {
+    @apply ring ring-red-500;
   }
 }
